--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Django==1.10.1
 djangorestframework==3.4.7
 django-resized==0.3.5
 Pillow==3.4.2
-ovp-users==1.0.7
+ovp_core==1.1.2
+ovp-users==1.0.20
 django-storages==1.5.1
