--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Django==1.10.5
 djangorestframework==3.5.3
 ovp-core==1.2.4
 ovp-users==1.1.7
+ovp-uploads==1.0.3
 whoosh==2.7.4
 djangorestframework-jwt==1.9.0
