--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ codecov==2.0.5
 coverage==4.3.4
 Django==1.10.5
 djangorestframework==3.5.3
+djangorestframework-jwt==1.9.0
 django-resized==0.3.5
 Pillow==4.0.0
 ovp_core==1.2.1
