--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -1,3 +1,4 @@
+django >= 1.11.3
 django-vinaigrette >= 1.0.1, < 1.1.0
 djangorestframework >= 3.6.3, < 3.7.0
 djangorestframework-csv >= 2.0.0, < 2.1.0
