--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -16,6 +16,6 @@ djangorestframework-jwt
 dateutils
 pyexcel_xls
 django-cors-headers
-django-rest-framework-social-oauth2
+django-rest-framework-social-oauth2==1.1.0
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
 
