Add boto3 to requirements project

--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -18,4 +18,5 @@ pyexcel_xls
 django-cors-headers
 django-rest-framework-social-oauth2
 martor
+boto3==1.7.77
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
