--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -19,3 +19,4 @@ django-cors-headers
 django-rest-framework-social-oauth2
 martor
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
+openpyxl < 2.5 # TODO: Fix django-import-export
