--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -2,7 +2,7 @@ django-ckeditor==5.3.1
 django-vinaigrette >= 1.0.1, < 1.1.0
 djangorestframework >= 3.8, < 3.9.0
 djangorestframework-csv >= 2.0.0, < 2.1.0
-django-haystack >= 2.6.1, < 2.7.0
+django-haystack == 2.7.0
 whoosh >= 2.7.4, < 2.8.0
 django-wysiwyg-redactor >= 0.5.1, < 0.6.0
 django-jet==1.0.6
