--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -20,4 +20,4 @@ django-rest-framework-social-oauth2
 martor
 django-admin-rangefilter
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
-openpyxl < 2.5 # TODO: Fix django-import-export
+openpyxl
