adicionado GOOGLE_MAPS_KEY ao test/.env

--- a/test/.env
+++ b/test/.env
@@ -2,6 +2,8 @@ DEBUG=1 # 0 -> False; 1 -> True.
 SITE=http://localhost:8000
 SECRET_KEY=0o55a_%0s2t6)+j9+7wj5e^-z=t0ql#7-+ncrtnn8q(kl+em6v
 
+GOOGLE_MAPS_KEY=AIzaSyA6FtG9g5KebYrjsnA8iBtX4NDty3Rofp0
+
 # Database
 DB_HOST=localhost
 DB_NAME=atados-ovp
