--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -19,5 +19,6 @@ django-cors-headers
 django-rest-framework-social-oauth2
 martor
 django-admin-rangefilter
+boto3
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
 openpyxl
