--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -20,5 +20,6 @@ django-rest-framework-social-oauth2
 martor
 django-admin-rangefilter
 boto3
+beautifulsoup4
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
 openpyxl
