--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: pip install -r requirements/requirements-dev.txt && pip install -r requirements/requirements-project.txt
+          command: pip install -r requirements/requirements-dev.txt
 
       # - save_cache:
       #     paths:
