--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
 
       - run:
           name: Install dependencies
+          # Arquivo para importar os demais requirements
           command: pip install -r requirements/requirements-global.txt --user
 
       # - save_cache:
