alterado arquivo de config do circleci

--- a/requirements/requirements-global.txt
+++ b/requirements/requirements-global.txt
@@ -1,4 +1,4 @@
--r api/django-ovp/requirements/requirements-dev.txt
+-r requirements-dev.txt
 django-git-submodules
 django-debug-toolbar
 dj-database-url
