--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -24,3 +24,4 @@ beautifulsoup4
 python-dotenv
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
 openpyxl
+odfpy
