--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,14 @@ executors:
       - image: circleci/python:3.7
         environment:
           DATABASE_URL: postgres://root:@localhost:5432/circle-test
+          HS_SEARCH_ENDPOINT: 'localhost:9200'
 
       - image: circleci/postgres:9.6.2-alpine
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle-test
+
+      - image: elasticsearch:2.4.6-alpine
 
     working_directory: ~/repo
 
