--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -22,6 +22,7 @@ django-admin-rangefilter
 boto3
 beautifulsoup4
 python-dotenv
+gql
 -e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
 openpyxl
 tablib==0.14.0 # Temporary lock on this version
