--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -1,11 +1,10 @@
-django-ckeditor==5.3.1
-django-vinaigrette >= 1.0.1, < 1.1.0
-djangorestframework >= 3.8, < 3.9.0
-djangorestframework-csv >= 2.0.0, < 2.1.0
+django-ckeditor==5.9.0
+django-vinaigrette >= 2.0, <= 2.1
+djangorestframework >= 3.11, <= 3.12
+djangorestframework-csv >= 2.1.0, < 2.2.0
 django-haystack == 2.8.1
 whoosh >= 2.7.4, < 2.8.0
-django-wysiwyg-redactor >= 0.5.1, < 0.6.0
-django-jet==1.0.6
+django-jet==1.0.8
 vcrpy
 drf-nested-routers
 requests
@@ -23,6 +22,6 @@ boto3
 beautifulsoup4
 python-dotenv
 gql
--e git+https://github.com/django-import-export/django-import-export.git@7645954f241aa7f042e9ed7871482f352927097c#egg=django_import_export
+django-import-export==2.0.2
 openpyxl
-tablib==0.14.0 # Temporary lock on this version
+tablib==1.1.0
