--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -8,7 +8,7 @@ django-jet==1.0.8
 vcrpy
 drf-nested-routers
 requests
-django-resized
+django-resized==0.3.9
 pillow
 shortuuid
 djangorestframework-jwt
