--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -16,7 +16,7 @@ dateutils
 pyexcel_xls
 django-cors-headers
 django-rest-framework-social-oauth2
-martor
+martor==1.4.9
 django-admin-rangefilter
 boto3
 beautifulsoup4
