--- a/requirements/requirements-project.txt
+++ b/requirements/requirements-project.txt
@@ -1,6 +1,6 @@
 django-ckeditor==5.9.0
 django-vinaigrette >= 2.0, <= 2.1
-djangorestframework >= 3.11, <= 3.12
+djangorestframework >= 3.11, < 3.12
 djangorestframework-csv >= 2.1.0, < 2.2.0
 django-haystack == 2.8.1
 whoosh >= 2.7.4, < 2.8.0
